Bug #6094 Error: select command denied to user 'root'@'localhost' in prepared statement
Submitted: 14 Oct 2004 12:12 Modified: 22 Oct 2004 17:17
Reporter: Georg Richter Email Updates:
Status: Closed Impact on me:
None 
Category:MySQL Server Severity:S2 (Serious)
Version:4.1 OS:Linux (Linux)
Assigned to: Michael Widenius CPU Architecture:Any

[14 Oct 2004 12:12] Georg Richter
Description:
see how to repeat :) 

How to repeat:
5.0.2-alpha-debug-log 
[14:02] root@test> create table t1 (a int); 
Query OK, 0 rows affected (0.10 sec) 
 
5.0.2-alpha-debug-log 
[14:02] root@test> insert into t1 values (1),(2),(3); 
Query OK, 3 rows affected (0.00 sec) 
Records: 3  Duplicates: 0  Warnings: 0 
 
5.0.2-alpha-debug-log 
[14:03] root@test> PREPARE my_stmt FROM 'create table t2 select * from t1'; 
ERROR 1143 (42000): select command denied to user 'root'@'localhost' for column 'a' in table 't1'
[22 Oct 2004 17:17] Michael Widenius
Fix will be in 4.1.7