Fix compiler warnings (detected by Intel's C++ compiler) Fixed checking of privilege handling in CREATE ... SELECT (Bug #6094)